--- a/qr-code-component-main/styles.css
+++ b/qr-code-component-main/styles.css
@@ -24,7 +24,7 @@ main {
 }
 
 .card {
-    margin: auto 10px;
+    margin: 30px auto;
     background-color: var(--White);
     position: absolute;
     width: 320px;
